metadata/objects/graxassetindex__x.object
<CustomObject>
    <description>graxassetindex</description>
    <externalDataSource>grax_odata</externalDataSource>
    <externalName>graxassetindex</externalName>
    <fields>
        <fullName>AccountId__c</fullName>
        <description>AccountId</description>
        <externalDeveloperName>AccountId</externalDeveloperName>
        <label>AccountId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountId_grax_xf_account__c</fullName>
        <description>AccountId_grax_xf_account</description>
        <externalDeveloperName>AccountId_grax_xf_account</externalDeveloperName>
        <label>AccountId_grax_xf_account</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssetLevel__c</fullName>
        <description>AssetLevel</description>
        <externalDeveloperName>AssetLevel</externalDeveloperName>
        <label>AssetLevel</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AssetProvidedById__c</fullName>
        <description>AssetProvidedById</description>
        <externalDeveloperName>AssetProvidedById</externalDeveloperName>
        <label>AssetProvidedById</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssetServicedById__c</fullName>
        <description>AssetServicedById</description>
        <externalDeveloperName>AssetServicedById</externalDeveloperName>
        <label>AssetServicedById</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Combo_c__c</fullName>
        <description>Asset_Combo__c</description>
        <externalDeveloperName>Asset_Combo__c</externalDeveloperName>
        <label>Asset_Combo__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactId__c</fullName>
        <description>ContactId</description>
        <externalDeveloperName>ContactId</externalDeveloperName>
        <label>ContactId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactId_grax_xf_contact__c</fullName>
        <description>ContactId_grax_xf_contact</description>
        <externalDeveloperName>ContactId_grax_xf_contact</externalDeveloperName>
        <label>ContactId_grax_xf_contact</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <description>CreatedById</description>
        <externalDeveloperName>CreatedById</externalDeveloperName>
        <label>CreatedById</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedById_grax_xf_user__c</fullName>
        <description>CreatedById_grax_xf_user</description>
        <externalDeveloperName>CreatedById_grax_xf_user</externalDeveloperName>
        <label>CreatedById_grax_xf_user</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <description>CreatedDate</description>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>CreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Current_Users_Asset_c__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Current_Users_Asset__c</description>
        <externalDeveloperName>Current_Users_Asset__c</externalDeveloperName>
        <label>Current_Users_Asset__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Users_Companys_Asset_c__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Current_Users_Companys_Asset__c</description>
        <externalDeveloperName>Current_Users_Companys_Asset__c</externalDeveloperName>
        <label>Current_Users_Companys_Asset__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DB_Days_c__c</fullName>
        <description>DB_Days__c</description>
        <externalDeveloperName>DB_Days__c</externalDeveloperName>
        <label>DB_Days__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description</description>
        <externalDeveloperName>Description</externalDeveloperName>
        <label>Description</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_c__c</fullName>
        <description>Email__c</description>
        <externalDeveloperName>Email__c</externalDeveloperName>
        <label>Email__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entitlement_Status_c__c</fullName>
        <description>Entitlement_Status__c</description>
        <externalDeveloperName>Entitlement_Status__c</externalDeveloperName>
        <label>Entitlement_Status__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID_c__c</fullName>
        <description>External_ID__c</description>
        <externalDeveloperName>External_ID__c</externalDeveloperName>
        <label>External_ID__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRAXCompanyName__c</fullName>
        <description>GRAXCompanyName</description>
        <externalDeveloperName>GRAXCompanyName</externalDeveloperName>
        <label>GRAXCompanyName</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRAX_Execution_Unique_Key__c</fullName>
        <description>GRAX_Execution_Unique_Key</description>
        <externalDeveloperName>GRAX_Execution_Unique_Key</externalDeveloperName>
        <label>GRAX_Execution_Unique_Key</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRAX_Execution_Unique_Keys__c</fullName>
        <description>GRAX_Execution_Unique_Keys</description>
        <externalDeveloperName>GRAX_Execution_Unique_Keys</externalDeveloperName>
        <label>GRAX_Execution_Unique_Keys</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRAX_Version__c</fullName>
        <description>GRAX_Version</description>
        <externalDeveloperName>GRAX_Version</externalDeveloperName>
        <label>GRAX_Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <description>Id</description>
        <externalDeveloperName>Id</externalDeveloperName>
        <label>Id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_c__c</fullName>
        <description>Image__c</description>
        <externalDeveloperName>Image__c</externalDeveloperName>
        <label>Image__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InstallDate__c</fullName>
        <description>InstallDate</description>
        <externalDeveloperName>InstallDate</externalDeveloperName>
        <label>InstallDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsCompetitorProduct__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IsCompetitorProduct</description>
        <externalDeveloperName>IsCompetitorProduct</externalDeveloperName>
        <label>IsCompetitorProduct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IsDeleted</description>
        <externalDeveloperName>IsDeleted</externalDeveloperName>
        <label>IsDeleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsInternal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IsInternal</description>
        <externalDeveloperName>IsInternal</externalDeveloperName>
        <label>IsInternal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsLocked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IsLocked</description>
        <externalDeveloperName>IsLocked</externalDeveloperName>
        <label>IsLocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <description>LastModifiedById</description>
        <externalDeveloperName>LastModifiedById</externalDeveloperName>
        <label>LastModifiedById</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedById_grax_xf_user__c</fullName>
        <description>LastModifiedById_grax_xf_user</description>
        <externalDeveloperName>LastModifiedById_grax_xf_user</externalDeveloperName>
        <label>LastModifiedById_grax_xf_user</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <description>LastModifiedDate</description>
        <externalDeveloperName>LastModifiedDate</externalDeveloperName>
        <label>LastModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastReferencedDate__c</fullName>
        <description>LastReferencedDate</description>
        <externalDeveloperName>LastReferencedDate</externalDeveloperName>
        <label>LastReferencedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastViewedDate__c</fullName>
        <description>LastViewedDate</description>
        <externalDeveloperName>LastViewedDate</externalDeveloperName>
        <label>LastViewedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LocationId__c</fullName>
        <description>LocationId</description>
        <externalDeveloperName>LocationId</externalDeveloperName>
        <label>LocationId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MayEdit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MayEdit</description>
        <externalDeveloperName>MayEdit</externalDeveloperName>
        <label>MayEdit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Name</description>
        <externalDeveloperName>Name</externalDeveloperName>
        <label>Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <description>OwnerId</description>
        <externalDeveloperName>OwnerId</externalDeveloperName>
        <label>OwnerId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerId_grax_xf_user__c</fullName>
        <description>OwnerId_grax_xf_user</description>
        <externalDeveloperName>OwnerId_grax_xf_user</externalDeveloperName>
        <label>OwnerId_grax_xf_user</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentId__c</fullName>
        <description>ParentId</description>
        <externalDeveloperName>ParentId</externalDeveloperName>
        <label>ParentId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <description>Price</description>
        <externalDeveloperName>Price</externalDeveloperName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product2Id__c</fullName>
        <description>Product2Id</description>
        <externalDeveloperName>Product2Id</externalDeveloperName>
        <label>Product2Id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product2Id_grax_xf_product2__c</fullName>
        <description>Product2Id_grax_xf_product2</description>
        <externalDeveloperName>Product2Id_grax_xf_product2</externalDeveloperName>
        <label>Product2Id_grax_xf_product2</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductCode__c</fullName>
        <description>ProductCode</description>
        <externalDeveloperName>ProductCode</externalDeveloperName>
        <label>ProductCode</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductDescription__c</fullName>
        <description>ProductDescription</description>
        <externalDeveloperName>ProductDescription</externalDeveloperName>
        <label>ProductDescription</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductFamily__c</fullName>
        <description>ProductFamily</description>
        <externalDeveloperName>ProductFamily</externalDeveloperName>
        <label>ProductFamily</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PurchaseDate__c</fullName>
        <description>PurchaseDate</description>
        <externalDeveloperName>PurchaseDate</externalDeveloperName>
        <label>PurchaseDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>Quantity</description>
        <externalDeveloperName>Quantity</externalDeveloperName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RecordTypeId__c</fullName>
        <description>RecordTypeId</description>
        <externalDeveloperName>RecordTypeId</externalDeveloperName>
        <label>RecordTypeId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordTypeId_grax_xf_recordtype__c</fullName>
        <description>RecordTypeId_grax_xf_recordtype</description>
        <externalDeveloperName>RecordTypeId_grax_xf_recordtype</externalDeveloperName>
        <label>RecordTypeId_grax_xf_recordtype</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RootAssetId__c</fullName>
        <description>RootAssetId</description>
        <externalDeveloperName>RootAssetId</externalDeveloperName>
        <label>RootAssetId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RootAssetId_grax_xf_asset__c</fullName>
        <description>RootAssetId_grax_xf_asset</description>
        <externalDeveloperName>RootAssetId_grax_xf_asset</externalDeveloperName>
        <label>RootAssetId_grax_xf_asset</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduled_Servicing_c__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Scheduled_Servicing__c</description>
        <externalDeveloperName>Scheduled_Servicing__c</externalDeveloperName>
        <label>Scheduled_Servicing__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SerialNumber__c</fullName>
        <description>SerialNumber</description>
        <externalDeveloperName>SerialNumber</externalDeveloperName>
        <label>SerialNumber</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Contract_c__c</fullName>
        <description>Service_Contract__c</description>
        <externalDeveloperName>Service_Contract__c</externalDeveloperName>
        <label>Service_Contract__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Frequency_Weeks_c__c</fullName>
        <description>Service_Frequency_Weeks__c</description>
        <externalDeveloperName>Service_Frequency_Weeks__c</externalDeveloperName>
        <label>Service_Frequency_Weeks__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status</description>
        <externalDeveloperName>Status</externalDeveloperName>
        <label>Status</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StockKeepingUnit__c</fullName>
        <description>StockKeepingUnit</description>
        <externalDeveloperName>StockKeepingUnit</externalDeveloperName>
        <label>StockKeepingUnit</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suggested_Products_c__c</fullName>
        <description>Suggested_Products__c</description>
        <externalDeveloperName>Suggested_Products__c</externalDeveloperName>
        <label>Suggested_Products__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <description>SystemModstamp</description>
        <externalDeveloperName>SystemModstamp</externalDeveloperName>
        <label>SystemModstamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>URLsrc_c__c</fullName>
        <description>URLsrc__c</description>
        <externalDeveloperName>URLsrc__c</externalDeveloperName>
        <label>URLsrc__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UsageEndDate__c</fullName>
        <description>UsageEndDate</description>
        <externalDeveloperName>UsageEndDate</externalDeveloperName>
        <label>UsageEndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Warranty_Indicator_c__c</fullName>
        <description>Warranty_Indicator__c</description>
        <externalDeveloperName>Warranty_Indicator__c</externalDeveloperName>
        <label>Warranty_Indicator__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>graxModifiedTime__c</fullName>
        <description>graxModifiedTime</description>
        <externalDeveloperName>graxModifiedTime</externalDeveloperName>
        <label>graxModifiedTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>grax_Account_Name__c</fullName>
        <description>grax_Account_Name</description>
        <externalDeveloperName>grax_Account_Name</externalDeveloperName>
        <label>grax_Account_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_Contact_Name__c</fullName>
        <description>grax_Contact_Name</description>
        <externalDeveloperName>grax_Contact_Name</externalDeveloperName>
        <label>grax_Contact_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_CreatedBy_Name__c</fullName>
        <description>grax_CreatedBy_Name</description>
        <externalDeveloperName>grax_CreatedBy_Name</externalDeveloperName>
        <label>grax_CreatedBy_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_LastModifiedBy_Name__c</fullName>
        <description>grax_LastModifiedBy_Name</description>
        <externalDeveloperName>grax_LastModifiedBy_Name</externalDeveloperName>
        <label>grax_LastModifiedBy_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_Owner_Name__c</fullName>
        <description>grax_Owner_Name</description>
        <externalDeveloperName>grax_Owner_Name</externalDeveloperName>
        <label>grax_Owner_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_Product2_Name__c</fullName>
        <description>grax_Product2_Name</description>
        <externalDeveloperName>grax_Product2_Name</externalDeveloperName>
        <label>grax_Product2_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_RecordType_Name__c</fullName>
        <description>grax_RecordType_Name</description>
        <externalDeveloperName>grax_RecordType_Name</externalDeveloperName>
        <label>grax_RecordType_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_RootAsset_Name__c</fullName>
        <description>grax_RootAsset_Name</description>
        <externalDeveloperName>grax_RootAsset_Name</externalDeveloperName>
        <label>grax_RootAsset_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_account_xf__c</fullName>
        <description>grax_account_xf</description>
        <externalDeveloperName>grax_account_xf</externalDeveloperName>
        <label>grax_account_xf</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_accountid_name__c</fullName>
        <description>grax_accountid_name</description>
        <externalDeveloperName>grax_accountid_name</externalDeveloperName>
        <label>grax_accountid_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_asset_name__c</fullName>
        <description>grax_asset_name</description>
        <externalDeveloperName>grax_asset_name</externalDeveloperName>
        <label>grax_asset_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_asset_xf__c</fullName>
        <description>grax_asset_xf</description>
        <externalDeveloperName>grax_asset_xf</externalDeveloperName>
        <label>grax_asset_xf</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_assetprovidedbyid_name__c</fullName>
        <description>grax_assetprovidedbyid_name</description>
        <externalDeveloperName>grax_assetprovidedbyid_name</externalDeveloperName>
        <label>grax_assetprovidedbyid_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_assetservicedbyid_name__c</fullName>
        <description>grax_assetservicedbyid_name</description>
        <externalDeveloperName>grax_assetservicedbyid_name</externalDeveloperName>
        <label>grax_assetservicedbyid_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_contact_xf__c</fullName>
        <description>grax_contact_xf</description>
        <externalDeveloperName>grax_contact_xf</externalDeveloperName>
        <label>grax_contact_xf</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_contactid_name__c</fullName>
        <description>grax_contactid_name</description>
        <externalDeveloperName>grax_contactid_name</externalDeveloperName>
        <label>grax_contactid_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_createdbyid_name__c</fullName>
        <description>grax_createdbyid_name</description>
        <externalDeveloperName>grax_createdbyid_name</externalDeveloperName>
        <label>grax_createdbyid_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_lastmodifiedbyid_name__c</fullName>
        <description>grax_lastmodifiedbyid_name</description>
        <externalDeveloperName>grax_lastmodifiedbyid_name</externalDeveloperName>
        <label>grax_lastmodifiedbyid_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_locationid_name__c</fullName>
        <description>grax_locationid_name</description>
        <externalDeveloperName>grax_locationid_name</externalDeveloperName>
        <label>grax_locationid_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_ownerid_name__c</fullName>
        <description>grax_ownerid_name</description>
        <externalDeveloperName>grax_ownerid_name</externalDeveloperName>
        <label>grax_ownerid_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_parentid_name__c</fullName>
        <description>grax_parentid_name</description>
        <externalDeveloperName>grax_parentid_name</externalDeveloperName>
        <label>grax_parentid_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_product2_xf__c</fullName>
        <description>grax_product2_xf</description>
        <externalDeveloperName>grax_product2_xf</externalDeveloperName>
        <label>grax_product2_xf</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_product2id_name__c</fullName>
        <description>grax_product2id_name</description>
        <externalDeveloperName>grax_product2id_name</externalDeveloperName>
        <label>grax_product2id_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_recordtype_xf__c</fullName>
        <description>grax_recordtype_xf</description>
        <externalDeveloperName>grax_recordtype_xf</externalDeveloperName>
        <label>grax_recordtype_xf</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_recordtypeid_name__c</fullName>
        <description>grax_recordtypeid_name</description>
        <externalDeveloperName>grax_recordtypeid_name</externalDeveloperName>
        <label>grax_recordtypeid_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_rootassetid_name__c</fullName>
        <description>grax_rootassetid_name</description>
        <externalDeveloperName>grax_rootassetid_name</externalDeveloperName>
        <label>grax_rootassetid_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_service_contract_c_name__c</fullName>
        <description>grax_service_contract__c_name</description>
        <externalDeveloperName>grax_service_contract__c_name</externalDeveloperName>
        <label>grax_service_contract__c_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_user_xf__c</fullName>
        <description>grax_user_xf</description>
        <externalDeveloperName>grax_user_xf</externalDeveloperName>
        <label>grax_user_xf</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_xf__c</fullName>
        <description>grax_xf</description>
        <externalDeveloperName>grax_xf</externalDeveloperName>
        <label>grax_xf</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>graxid__c</fullName>
        <description>graxid</description>
        <externalDeveloperName>graxid</externalDeveloperName>
        <label>graxid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>graxorgid__c</fullName>
        <description>graxorgid</description>
        <externalDeveloperName>graxorgid</externalDeveloperName>
        <label>graxorgid</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>graxassetindex</label>
    <pluralLabel>graxassetindex</pluralLabel>
</CustomObject>